FE - Fix Most Issues in Firefox
NooBaa FE now fully supports Firefox.

The only issue left is that firefox do not allow the developer to style
it’s scrollbars via css so the scrollbars may look different.

There is a good chance that this fix will also enable a Usable FE in
in Microsoft Edge but i didn’t checked this yet.

#388

--- a/frontend/src/app/styles/site.less
+++ b/frontend/src/app/styles/site.less
@@ -122,7 +122,7 @@ input[type="search"] {
 
     margin: 0;
     line-height: 1;
-    padding-left: 2em;
+    padding-left: 2.5em;
     background-image: url('@{assets}/search.png');
     background-position: @gutter/2;
     background-repeat: no-repeat;
